Bug 237562 - amarok crashes when right-clicking on a place in -> Files -> Places [@ FileView::tracksForEdit]
Summary: amarok crashes when right-clicking on a place in -> Files -> Places [@ FileVi...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: File Browser (show other bugs)
Version: 2.3.0.90
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-14 01:34 UTC by rainer.feigl
Modified: 2010-05-16 11:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 2.3.1


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rainer.feigl 2010-05-14 01:34:50 UTC
Application: amarok (2.3.0.90)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-22-generic x86_64
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
does not matter on what kind of place i click (home, network, trash, ...)
i just was curious what kind of options i have on right-click

The crash can be reproduced every time.

 -- Backtrace:
Application: Amarok (amarok), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fafc1f78780 (LWP 3408))]

Thread 15 (Thread 0x7fafaa354710 (LWP 3409)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:211
#1  0x00007fafb06be081 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#3  0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#4  0x0000000000000000 in ?? ()

Thread 14 (Thread 0x7fafa951b710 (LWP 3410)):
#0  0x00007fafbedaff53 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fafb828f4a9 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007fafb828f8fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007fafbf71a566 in QEventDispatcherGlib::processEvents (this=0x180cfb0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#4  0x00007fafbf6ef992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x00007fafbf6efd6c in QEventLoop::exec (this=0x7fafa951ad70, flags=) at kernel/qeventloop.cpp:201
#6  0x00007fafbf5f9d59 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#7  0x00007fafb091a440 in ?? () from /usr/lib/qt4/plugins/phonon_backend/phonon_xine.so
#8  0x00007fafbf5fc775 in QThreadPrivate::start (arg=0x180d340) at thread/qthread_unix.cpp:248
#9  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#10 0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 13 (Thread 0x7fafa8b10710 (LWP 3413)):
#0  0x00007fafbedaff53 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=333) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fafa8b15915 in ?? () from /usr/lib/xine/plugins/1.27/xineplug_ao_out_alsa.so
#2  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#3  0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#4  0x0000000000000000 in ?? ()

Thread 12 (Thread 0x7fafa830f710 (LWP 3414)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fafb06cee23 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#3  0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#4  0x0000000000000000 in ?? ()

Thread 11 (Thread 0x7fafa7703710 (LWP 3415)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fafb06cee23 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#3  0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#4  0x0000000000000000 in ?? ()

Thread 10 (Thread 0x7fafa6f02710 (LWP 3416)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fafb06cee23 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#3  0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#4  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7fafa6701710 (LWP 3417)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fafb06cee23 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#3  0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#4  0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7fafa4d6c710 (LWP 3419)):
#0  0x00007fafb82b4420 in g_thread_self () from /lib/libglib-2.0.so.0
#1  0x00007fafb828d7f0 in g_main_context_acquire () from /lib/libglib-2.0.so.0
#2  0x00007fafb828f295 in ?? () from /lib/libglib-2.0.so.0
#3  0x00007fafb828f8fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x00007fafbf71a566 in QEventDispatcherGlib::processEvents (this=0x2674cb0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#5  0x00007fafbf6ef992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#6  0x00007fafbf6efd6c in QEventLoop::exec (this=0x7fafa4d6bd90, flags=) at kernel/qeventloop.cpp:201
#7  0x00007fafbf5f9d59 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#8  0x00007fafbf6d0178 in QInotifyFileSystemWatcherEngine::run (this=0x267a3c0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007fafbf5fc775 in QThreadPrivate::start (arg=0x267a3c0) at thread/qthread_unix.cpp:248
#10 0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#11 0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7faf9626a710 (LWP 3420)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fafba168ca6 in ?? () from /usr/lib/libQtWebKit.so.4
#2  0x00007fafba168ce9 in ?? () from /usr/lib/libQtWebKit.so.4
#3  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#4  0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7faf94ec9710 (LWP 3421)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fafbf5fd72b in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x27a5f30, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x27a5f30, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007fafbbc51026 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x27a5060, th=0x27a6360) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fafbbc536ab in ThreadWeaver::WorkingHardState::applyForWork (this=0x27a4b70, th=0x27a6360) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007fafbbc51bff in ThreadWeaver::ThreadRunHelper::run (this=0x7faf94ec8de0, parent=0x27a5060, th=0x27a6360) at ../../../threadweaver/Weaver/Thread.cpp:87
#6  0x00007fafbbc52168 in ThreadWeaver::Thread::run (this=0x27a6360) at ../../../threadweaver/Weaver/Thread.cpp:142
#7  0x00007fafbf5fc775 in QThreadPrivate::start (arg=0x27a6360) at thread/qthread_unix.cpp:248
#8  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#9  0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7faf946c8710 (LWP 3422)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fafbf5fd72b in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x27a5f30, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x27a5f30, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007fafbbc51026 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x27a5060, th=0x27a7c20) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fafbbc536ab in ThreadWeaver::WorkingHardState::applyForWork (this=0x27a4b70, th=0x27a7c20) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007fafbbc536c4 in ThreadWeaver::WorkingHardState::applyForWork (this=0x27a4b70, th=0x27a7c20) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007fafbbc536c4 in ThreadWeaver::WorkingHardState::applyForWork (this=0x27a4b70, th=0x27a7c20) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#7  0x00007fafbbc536c4 in ThreadWeaver::WorkingHardState::applyForWork (this=0x27a4b70, th=0x27a7c20) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#8  0x00007fafbbc51bff in ThreadWeaver::ThreadRunHelper::run (this=0x7faf946c7de0, parent=0x27a5060, th=0x27a7c20) at ../../../threadweaver/Weaver/Thread.cpp:87
#9  0x00007fafbbc52168 in ThreadWeaver::Thread::run (this=0x27a7c20) at ../../../threadweaver/Weaver/Thread.cpp:142
#10 0x00007fafbf5fc775 in QThreadPrivate::start (arg=0x27a7c20) at thread/qthread_unix.cpp:248
#11 0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#12 0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7faf900e3710 (LWP 3423)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fafbf5fd72b in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x27a5f30, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x27a5f30, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007fafbbc51026 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x27a5060, th=0x293e860) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fafbbc536ab in ThreadWeaver::WorkingHardState::applyForWork (this=0x27a4b70, th=0x293e860) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007fafbbc51bff in ThreadWeaver::ThreadRunHelper::run (this=0x7faf900e2de0, parent=0x27a5060, th=0x293e860) at ../../../threadweaver/Weaver/Thread.cpp:87
#6  0x00007fafbbc52168 in ThreadWeaver::Thread::run (this=0x293e860) at ../../../threadweaver/Weaver/Thread.cpp:142
#7  0x00007fafbf5fc775 in QThreadPrivate::start (arg=0x293e860) at thread/qthread_unix.cpp:248
#8  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#9  0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7faf8f8e2710 (LWP 3424)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fafbf5fd72b in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x27a5f30, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x27a5f30, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007fafbbc51026 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x27a5060, th=0x2c09fa0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fafbbc536ab in ThreadWeaver::WorkingHardState::applyForWork (this=0x27a4b70, th=0x2c09fa0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007fafbbc536c4 in ThreadWeaver::WorkingHardState::applyForWork (this=0x27a4b70, th=0x2c09fa0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007fafbbc536c4 in ThreadWeaver::WorkingHardState::applyForWork (this=0x27a4b70, th=0x2c09fa0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#7  0x00007fafbbc51bff in ThreadWeaver::ThreadRunHelper::run (this=0x7faf8f8e1de0, parent=0x27a5060, th=0x2c09fa0) at ../../../threadweaver/Weaver/Thread.cpp:87
#8  0x00007fafbbc52168 in ThreadWeaver::Thread::run (this=0x2c09fa0) at ../../../threadweaver/Weaver/Thread.cpp:142
#9  0x00007fafbf5fc775 in QThreadPrivate::start (arg=0x2c09fa0) at thread/qthread_unix.cpp:248
#10 0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#11 0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7faf8f0e1710 (LWP 3425)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fafbb4bc2a6 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7fafbb79a220) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2304
#2  0x00007fafbb4bc2e9 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x7fafbb7a82ec) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1438
#3  0x00007fafbd2069ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#4  0x00007fafbedbc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fafc1f78780 (LWP 3408)):
[KCrash Handler]
#5  QUrl (this=0x7fff4ebad050, other=...) at io/qurl.cpp:4114
#6  0x00007fafbfafdfb9 in KUrl (this=0x7fff4ebad050, _u=...) at ../../kdecore/io/kurl.cpp:472
#7  0x00007fafb8de8440 in KFileItem::url (this=<value optimized out>) at ../../kio/kio/kfileitem.cpp:1277
#8  0x00007fafc1269f6a in FileView::tracksForEdit (this=<value optimized out>) at ../../src/browsers/filebrowser/FileView.cpp:438
#9  0x00007fafc126a240 in FileView::actionsForIndices (this=0x2c29280, indices=<value optimized out>) at ../../src/browsers/filebrowser/FileView.cpp:328
#10 0x00007fafc126a9c3 in FileView::contextMenuEvent (this=0x2c29280, e=<value optimized out>) at ../../src/browsers/filebrowser/FileView.cpp:92
#11 0x00007fafc00baf68 in QWidget::event (this=0x2c29280, event=0x7fff4ebae0f0) at kernel/qwidget.cpp:8165
#12 0x00007fafc04624e6 in QFrame::event (this=0x2c29280, e=0x7fff4ebae0f0) at widgets/qframe.cpp:557
#13 0x00007fafc059126b in QAbstractItemView::viewportEvent (this=0x2c29280, event=0x7fff4ebae0f0) at itemviews/qabstractitemview.cpp:1610
#14 0x00007fafc05cc902 in QTreeView::viewportEvent (this=0x2c29280, event=0x7fff4ebae0f0) at itemviews/qtreeview.cpp:1248
#15 0x00007fafbf6f0487 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x2c0dda0, event=0x7fff4ebae0f0) at kernel/qcoreapplication.cpp:819
#16 0x00007fafc00651fc in QApplicationPrivate::notify_helper (this=0x1673a30, receiver=0x2c0dda0, e=0x7fff4ebae0f0) at kernel/qapplication.cpp:4296
#17 0x00007fafc006b8c3 in QApplication::notify (this=0x7fff4ebaedd0, receiver=0x2c0dda0, e=0x7fff4ebae0f0) at kernel/qapplication.cpp:3944
#18 0x00007fafc114b9da in App::notify (this=0x7fff4ebad050, receiver=0x10, event=0x3ffffff8) at ../../src/App.cpp:916
#19 0x00007fafbf6f106c in QCoreApplication::notifyInternal (this=0x7fff4ebaedd0, receiver=0x2c0dda0, event=0x7fff4ebae0f0) at kernel/qcoreapplication.cpp:704
#20 0x00007fafc00eafb2 in QETWidget::translateMouseEvent (this=<value optimized out>, event=<value optimized out>) at kernel/qapplication_x11.cpp:4373
#21 0x00007fafc00e98ac in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff4ebaea40) at kernel/qapplication_x11.cpp:3501
#22 0x00007fafc0115882 in x11EventSourceDispatch (s=0x1677110, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#23 0x00007fafb828b8c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#24 0x00007fafb828f748 in ?? () from /lib/libglib-2.0.so.0
#25 0x00007fafb828f8fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#26 0x00007fafbf71a513 in QEventDispatcherGlib::processEvents (this=0x1507140, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#27 0x00007fafc011546e in QGuiEventDispatcherGlib::processEvents (this=0x7fff4ebad050, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#28 0x00007fafbf6ef992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#29 0x00007fafbf6efd6c in QEventLoop::exec (this=0x7fff4ebaed70, flags=) at kernel/qeventloop.cpp:201
#30 0x00007fafbf6f3aab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#31 0x0000000000408752 in main (argc=1, argv=0x7fff4ebb0d48) at ../../src/main.cpp:237

Possible duplicates by query: bug 235832, bug 201544.

Reported using DrKonqi
Comment 1 Sven Krohlas 2010-05-14 08:33:55 UTC
Could also be a KIO bug. I can reproduce it easily here.

Backtrace from latest git:

Thread 1 (Thread 0xb27cc700 (LWP 2957)):
[KCrash Handler]
#6  0xb670f798 in QUrl::QUrl (this=0xbfe0e7a0, other=...) at io/qurl.cpp:4114
#7  0xb690f9ba in KUrl::KUrl (this=0xbfe0e7a0, _u=...) at /usr/src/debug/kdelibs-4.4.3/kdecore/io/kurl.cpp:472
#8  0xb36f816f in KFileItem::url (this=0xbfe0e778) at /usr/src/debug/kdelibs-4.4.3/kio/kio/kfileitem.cpp:1277
#9  0xb710198f in FileView::tracksForEdit (this=0x9196008) at /home/sven/git/krohlass-clone/src/browsers/filebrowser/FileView.cpp:439
#10 0xb7100dcf in FileView::actionsForIndices (this=0x9196008, indices=...) at /home/sven/git/krohlass-clone/src/browsers/filebrowser/FileView.cpp:329
#11 0xb70ff5e9 in FileView::contextMenuEvent (this=0x9196008, e=0xbfe0f268) at /home/sven/git/krohlass-clone/src/browsers/filebrowser/FileView.cpp:93
#12 0xb5cea98d in QWidget::event (this=0x9196008, event=0xbfe0f268) at kernel/qwidget.cpp:8165
#13 0xb60f7155 in QFrame::event (this=0x9196008, e=0xbfe0f268) at widgets/qframe.cpp:557
#14 0xb6193e01 in QAbstractScrollArea::viewportEvent (this=0xb59fc301, e=0xbfe0e7a0) at widgets/qabstractscrollarea.cpp:1036
#15 0xb624caec in QAbstractItemView::viewportEvent (this=0x9196008, event=0xbfe0f268) at itemviews/qabstractitemview.cpp:1610
#16 0xb628d78c in QTreeView::viewportEvent (this=0x9196008, event=0xbfe0f268) at itemviews/qtreeview.cpp:1248
#17 0xb61966f6 in viewportEvent (event=<value optimized out>, this=<value optimized out>) at widgets/qabstractscrollarea_p.h:100
#18 QAbstractScrollAreaFilter::eventFilter (event=<value optimized out>, this=<value optimized out>) at widgets/qabstractscrollarea_p.h:116
#19 0xb67630ae in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x8528720, receiver=0x9195f20, event=0xbfe0f268) at kernel/qcoreapplication.cpp:819
#20 0xb5c8a3cd in QApplicationPrivate::notify_helper (this=0x8528720, receiver=0x9195f20, e=0xbfe0f268) at kernel/qapplication.cpp:4296
#21 0xb5c91658 in QApplication::notify (this=0x9195f20, receiver=0x9195f20, e=0xbfe0f268) at kernel/qapplication.cpp:3944
#22 0xb757ec71 in KApplication::notify (this=0xbfe0fa78, receiver=0x9195f20, event=0xbfe0f268) at /usr/src/debug/kdelibs-4.4.3/kdeui/kernel/kapplication.cpp:302
#23 0xb6763dde in QCoreApplication::notifyInternal (this=0xbfe0fa78, receiver=0x9195f20, event=0xbfe0f268) at kernel/qcoreapplication.cpp:704
#24 0xb5d23bfd in QCoreApplication::sendSpontaneousEvent (receiver=0x9195f20, event=0xbfe0e7a0) at ../../src/corelib/kernel/qcoreapplication.h:218
#25 0xb5d1ed00 in QETWidget::translateMouseEvent (this=0x8d8c9c8, event=0xbfe0f74c) at kernel/qapplication_x11.cpp:4373
#26 0xb5d1dc44 in QApplication::x11ProcessEvent (this=0xbfe0fa78, event=0xbfe0f74c) at kernel/qapplication_x11.cpp:3379
#27 0xb5d4b2b8 in x11EventSourceDispatch (s=0x852b4e8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#28 0xb344f4c2 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#29 0xb3452d98 in ?? () from /usr/lib/libglib-2.0.so.0
#30 0xb3452ebe in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#31 0xb6790931 in QEventDispatcherGlib::processEvents (this=0x8439a18, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#32 0xb5d4ae0a in QGuiEventDispatcherGlib::processEvents (this=0x8439a18, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#33 0xb676244d in QEventLoop::processEvents (this=0xbfe0fa04, flags=) at kernel/qeventloop.cpp:149
#34 0xb6762899 in QEventLoop::exec (this=0xbfe0fa04, flags=...) at kernel/qeventloop.cpp:201
#35 0xb6766a10 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#36 0xb5c8a4a4 in QApplication::exec () at kernel/qapplication.cpp:3579
#37 0x08052837 in main (argc=3, argv=0xbfe102f4) at /home/sven/git/krohlass-clone/src/main.cpp:237
Comment 2 Mikko C. 2010-05-16 11:02:59 UTC
fixed by 36b70c1d1c6741fdb8c327483e1395b7eaf496da