Do not show context menu when right cliking the file browser in "places" mode as that can lead to any number of different crashes...

BUG: 237562